# green-machine-mini

./: CLAUDE.md  README.md  pyproject.toml
docs/: 01_project_concept.md  02_green_machine_interconnect.md  03_boosted_bsm.md  04_distributed_logical_qubit.md
experiments/: run_skeleton_demo.py
src/green_machine_mini/: __init__.py
src/green_machine_mini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/green_machine_mini/interconnect/: __init__.py  green_machine.py  mzi.py  time_bins.py
src/green_machine_mini/modules/: __init__.py  module.py
src/green_machine_mini/protocols/: __init__.py  boosted_bsm.py
src/green_machine_mini/qec/: __init__.py  distributed_w_code.py
tests/: test_imports.py
