[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "green-machine-mini"
version = "0.1.0"
description = "Educational toy model of the Green Machine photonic interconnect for distributed modular quantum computing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
